--- a/basic-auth-practice/src/main/resources/application.properties
+++ b/basic-auth-practice/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 spring.application.name=basic-auth-practice
 
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.path=/h2-console
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+
+aws.dynamodb.endpoint=http://localhost:8000
+aws.region=us-west-2
+aws.accessKey=test
+aws.secretKey=test
