[Added] JWT Authentication

--- a/basic-auth-practice/src/main/resources/application.properties
+++ b/basic-auth-practice/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=basic-auth-practice
+spring.profiles.active=h2
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.path=/h2-console
