[Modified] Jwt authentication

--- a/basic-auth-practice/pom.xml
+++ b/basic-auth-practice/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.5.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.practice.auth.basic</groupId>
 	<artifactId>basic-auth-practice</artifactId>
@@ -70,7 +70,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- AWS SDK for DynamoDB -->
 		<dependency>
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>dynamodb</artifactId>
