[Motified] Online Platform App

--- a/online-platform/src/main/resources/application.properties
+++ b/online-platform/src/main/resources/application.properties
@@ -3,3 +3,6 @@ aws.dynamodb.endpoint=http://localhost:8000
 aws.region=us-west-2
 aws.accessKey=test
 aws.secretKey=test
+
+spring.profiles.active=prod
+logging.config=classpath:logback-spring-prod.xml
