[Updated] Online Platform App

--- a/online-platform/src/main/resources/application.properties
+++ b/online-platform/src/main/resources/application.properties
@@ -4,5 +4,5 @@ aws.region=us-west-2
 aws.accessKey=test
 aws.secretKey=test
 
-spring.profiles.active=prod
-logging.config=classpath:logback-spring-prod.xml
+spring.profiles.active=dev
+logging.config=classpath:logback-spring-dev.xml
