[Updated] Online Platform App

--- a/online-platform/src/main/resources/application-dev.properties
+++ b/online-platform/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-logging.level.root=DEBUG
+logging.level.root=INFO
 logging.file.name=logs/dev.log
 
 jwt.secret=dev-secret-key-1234567890-abcdefghijknlmopqr
