[Enhanced] Online Platform App

--- a/online-platform/src/main/resources/application-prod.properties
+++ b/online-platform/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 logging.level.root=WARN
-logging.file.name=logs/prod.log
 
 jwt.secret=prod-secret-key-0987654321-abcdefghijknlmopqr
+jwt.expiration=10000
