--- a/online-platform/src/main/resources/application-dev.properties
+++ b/online-platform/src/main/resources/application-dev.properties
@@ -1,5 +1,4 @@
-logging.level.root=INFO
-logging.file.name=logs/dev.log
+logging.level.root=DEBUG
 
 jwt.secret=dev-secret-key-1234567890-abcdefghijknlmopqr
-
+jwt.expiration=3600000
