[Enhanced] Online Platform App

--- a/online-platform/src/main/resources/application-dev.properties
+++ b/online-platform/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
 logging.level.root=DEBUG
+log.path=/Users/yatimyintlwin/Personal/onlineLogging
+log.filename=online.log
 
 jwt.secret=dev-secret-key-1234567890-abcdefghijknlmopqr
 jwt.expiration=3600000
