--- a/online-platform/src/main/resources/application-prod.properties
+++ b/online-platform/src/main/resources/application-prod.properties
@@ -1,4 +1,6 @@
 logging.level.root=WARN
+log.path=/Users/yatimyintlwin/Personal/onlineLogging
+log.filename=online.log
 
 jwt.secret=prod-secret-key-0987654321-abcdefghijknlmopqr
 jwt.expiration=10000
