--- a/basic-auth-practice/pom.xml
+++ b/basic-auth-practice/pom.xml
@@ -102,7 +102,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
-		<dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
+        </dependency>
+
+        <dependency>
 			<groupId>jakarta.validation</groupId>
 			<artifactId>jakarta.validation-api</artifactId>
 		</dependency>
